# TRES

./: .gitignore  BIN.py  BPS.py  MESA_setup.py  README.md  README_developer.md  TPS.py  TRES.py  TRES_options.py  TRES_setup.py  binary.py  binev.data  interactions.py  interface.py  pyproject.toml  rdc_BIN.py  rdc_TRES.py  rdc_TRES_csv.py  reduce_TRES_output.py  test_TRES.py  test_TRES.txt  tidal_friction_constant.py  tres_options.py  tres_plotting.py  tres_setup.py  triple_class.py
developer/: README_developer.md  TRES_old_Oct22.py  how_to_run_TRES_from_AMUSE.py  rdc_TPS.py  run_TPS.sh
example/: example_template.ipynb  examples_TRES_AMUSE_book.py  minimal_example.ipynb
seculartriple_TPS/: Makefile  Makefile_new  interface.py  tidal_friction_constant_orig.py
seculartriple_TPS/src/: ODE_system.c  ODE_system.h  main_code.c  main_code.h  tidal_friction_parameters.c  tidal_friction_parameters.h
seculartriple_TPS/src/cvode/: cvode_band.c  cvode_diag.h  cvode_spgmr.c  cvode_spils.h
src/: ODE_system.h  helper_routines.h  main_code.c  main_code.h
src/cvode/: cvode_band.h  cvode_bandpre.h  cvode_spbcgs.h  sundials_band.c
src/tres/: __init__.py  interactions.py  options.py  rdc.py  run_tres.py  setup.py  tps.py  tres.py  triple_class.py
src/tres/seculartriple/: __init__.py  interface.py  tidal_friction_constant.py
src/tres/seculartriple/src/: ODE_system.c  helper_routines.c  main_code.h  tidal_friction_parameters.c
src/tres/seculartriple/src/cvode/: cvode_diag_impl.h  cvode_spbcgs.c  cvode_spgmr.h  cvode_spils_impl.h  cvode_sptfqmr.c  cvode_sptfqmr.h  (+3 more)
