[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TRES"
version = "2025.03.0"
# dynamic = ["version"]
dependencies = [
  "numpy >= 1.24.3, <3",
  "matplotlib >= 3.7.1, <4",
  "scipy >= 1.9.0, <1.14",
  "astropy >= 5.0, <7",
  # "amuse-framework >= 2024",
  # "amuse-seba >= 2024",
]
requires-python = ">= 3.8"
authors = [
  {name = "Silvia Toonen", email = "s.g.m.toonen@uva.nl"},
]
description = "TRES"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["astrophysics"]

[project.urls]
Issues = "https://github.com/amusecode/TRES/issues"
Repository = "https://github.com/amusecode/TRES"

[tool.pylint]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ["py38"]
